[gd_scene load_steps=6 format=3 uid="uid://dj4vbw8xwa568"]

[ext_resource type="Texture2D" uid="uid://cpch7jp2n221c" path="res://assets/grenade.png" id="1_dcjm1"]
[ext_resource type="Script" path="res://scripts/grenade.gd" id="1_ydc01"]
[ext_resource type="PackedScene" uid="uid://ckp4se861lfjy" path="res://assets/explosion_particle.tscn" id="3_teh1w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r824e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fqjoy"]
radius = 34.6775

[node name="Grenade" type="RigidBody2D" groups=["One-Shot"]]
top_level = true
z_index = 12
disable_mode = 1
mass = 0.6
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_ydc01")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r824e")

[node name="GrenadeSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_dcjm1")

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2(9.53674e-07, 1)
scale = Vector2(2.25, 2.3125)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fqjoy")
debug_color = Color(0.996112, 0, 0.192959, 0.42)

[node name="GPUParticles2D" parent="Area2D" instance=ExtResource("3_teh1w")]

[connection signal="body_entered" from="Area2D" to="." method="_on_explosion_site_entered"]
